// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equation Symbols - Bar Bar 1`] = `
Array [
  0.7,
  0,
  0,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Symbols - Bar Bar 2`] = `
Array [
  0.7,
  0,
  0.028,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;

exports[`Equation Symbols - Bar Bar 3`] = `
Array [
  0.7,
  0,
  0.035,
  0,
  0.7,
  0,
  0,
  0,
  1,
]
`;
